# agent-dev-101

./: .env.example  .gitignore  README.md  card-prompt.md  cover-template.html  pyproject.toml
app/: __init__.py  config.py  llm.py  utils.py
blog/: README.md  W1-D1-01 token 和 embedding 基础知识.md  W1-D1-02 Embedding 概念与实战.md  W1-D1-03 Chat Templates 与角色系统.md  W1-D2-01 LLM 模型参数避坑指南：Agent 开发者最该知道的事.md  W1-D2-02 API 调用实战：用 Python SDK 完成你的第一次多轮对话.md  W1-D2-03 多轮对话与消息管理：Token 计数、截断策略和对话历史的正确打开方式.md  W1-D3-01 Prompt Engineering 回顾：从会写提示词到理解"信息设计".md  W1-D3-02 什么是 Context Engineering：从"写好提示词"到"设计信息系统".md  W1-D3-03 为什么 Agent 需要 Context Engineering：上下文窗口不是越大越好.md  W1-D4-01 Context Engineering 核心模式与实践：从理论到落地.md  W1-D4-02 Prompt Cache 全解析：原理、厂商对比与最佳实践.md  W1-D5-01 什么是 AI Agent：不只是能聊天，而是能"做事"的系统.md  W1-D5-02 Workflow vs Agent：不是所有问题都需要 Agent.md  W1-D6-01 Agent 设计模式总览：六大模式一图看懂.md  W1-D6-02 从零理解一个最简 Agent：用伪代码走通 Agent Loop.md  W2-D10-01 ReAct 模式深入：从论文核心思想到 Thought-Action-Observation 循环.md  W2-D11-01 从零手写 ReAct Agent：Prompt 模板、循环控制、踩坑与改进方向.md  W2-D12-01 结构化输出全攻略：从 Prompt 求着到 Schema 摁着，让 LLM 老老实实吐 JSON.md  W2-D13-01 第二周项目：用 Function Calling + ReAct + Rich UI 拼一只能跑的命令行 AI 助手.md  W2-D8-01 Function Calling：让模型从"只会说"到"能动手"的关键一步.md  W2-D9-01 完整走通 Function Calling：从单工具到多工具编排.md  W3-D14-01 LangChain 入门：抛开"框架"滤镜，看清它到底替你做了什么.md  W3-D15-01 LangChain 三件套：ChatModel + PromptTemplate + LCEL.md  W3-D15-01 LangChain 三件套：Model + Prompt + LCEL.md  learning-plan.md  一文读懂：Loop Engineering 是个啥东西.md  一文读懂：SKILL 的设计模式.md
days/: notebook.ipynb
example/notebook/: chat.ipynb  example.ipynb  tokens.ipynb
(+63 files in other folders)
